<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/home_title"
        android:icon="@drawable/ic_home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_report"
        android:title="@string/home_add"
        android:icon="@drawable/ic_list_"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_message"
        android:title="@string/home_message"
        android:icon="@drawable/ic_message"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/home_profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="never"/>
</menu>