<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Panel.EdithPacienteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:helperText="@string/helpe_require"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_person"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApellidoP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname_p"
            app:helperText="@string/helpe_require"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApellidoM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname_m"
            app:helperText="@string/helpe_require"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_phone"
            app:helperText="@string/helpe_require"
            app:counterMaxLength="@integer/counter_max_phone"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_phone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_phone"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHistoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hitoria_clinica"
            app:helperText="@string/helpe_require"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_historia"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_list_"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHistoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="@integer/counter_max_historia"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dni"
            app:helperText="@string/helpe_require"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_phone"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_credit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_phone"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edad"
            app:helperText="@string/helpe_require"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_edad"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_calendar_today"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="@integer/counter_max_edad" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>