<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgPortada"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/gestantev1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_input_usuario"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:helperText="@string/card_required"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPortada">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_password"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiUsuario"
        app:helperText="@string/card_required"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_btn_login"
        android:layout_marginTop="@dimen/common_padding_min"
        app:icon="@drawable/ic_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>


</androidx.constraintlayout.widget.ConstraintLayout>